# weather-station

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust_ci.yml
src/: lib.rs  main.rs  network.rs  sensors.rs
src/http_server/: server.rs
src/network/: dhcp.rs  network_tasks.rs
src/sensors/: dht11.rs
src/server/: server.rs
