[package]
edition = "2024"
name = "weather-station"
version = "0.1.0"

[[bin]]
name = "weather-station"
path = "./src/bin/main.rs"

[dependencies]
defmt = "1.0.1"
embassy-net = { version = "0.7.0", features = [
  "defmt",
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = "0.8.0"
esp-backtrace = { version = "0.16", features = [
  "defmt",
  "esp32",
  "exception-handler",
  "panic-handler",
] }
esp-hal = { version = "1.0.0-beta.1", features = [
  "defmt",
  "esp32",
  "unstable",
] }
esp-println = { version = "0.14.0", features = ["defmt-espflash", "esp32"] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }


critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = [
  "defmt",
  "task-arena-size-20480",
] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-hal-embassy = { version = "0.8.1", features = ["esp32"] }
esp-wifi = { version = "0.14.1", features = [
  "ble",
  "builtin-scheduler",
  "coex",
  "defmt",
  "esp-alloc",
  "esp32",
  "esp-now",
  "wifi",
] }


heapless = { version = "0.8.0", default-features = false }
static_cell = { version = "2.1.0", features = ["nightly"] }
esp-bootloader-esp-idf = "0.1.0"
embassy-futures = "0.1.1"
embassy-sync = "0.7.0"
cfg-if = "1.0.1"
edge-dhcp = { version = "0.6.0", features = ["defmt"] }
edge-nal = "0.5.0"
edge-nal-embassy = { version = "0.6.0", features = ["defmt"] }
picoserve = { version = "0.16.0", features = ["defmt", "embassy"] }
serde = { version = "1.0.219", default-features = false, features = [
  "derive",
  "serde_derive",
] }
serde-json-core = { version = "0.6.0", features = ["defmt", "heapless"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
codegen-units = 6
opt-level = "z"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
