[package]
edition = "2024"
name = "weather-station"
version = "0.1.0"

[[bin]]
name = "weather-station"
path = "./src/main.rs"

[dependencies]
defmt = "1.0.1"
embassy-net = { version = "0.7.0", features = [
  "defmt",
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = "0.8.0"
esp-backtrace = { version = "0.16", features = [
  "defmt",
  "exception-handler",
  "panic-handler",
] }
esp-hal = { version = "1.0.0-beta.1", features = ["defmt", "unstable"] }
esp-println = { version = "0.14.0", features = ["defmt-espflash"] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }


critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = [
  "defmt",
  "task-arena-size-20480",
] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-hal-embassy = { version = "0.8.1" }
esp-wifi = { version = "0.14.1", features = [
  "ble",
  "builtin-scheduler",
  "coex",
  "defmt",
  "esp-alloc",
  "esp-now",
  "wifi",
] }


heapless = { version = "0.8.0", default-features = false }
static_cell = { version = "2.1.0", features = ["nightly"] }
esp-bootloader-esp-idf = "0.1.0"
embassy-futures = "0.1.1"
embassy-sync = "0.7.0"
cfg-if = "1.0.1"
edge-dhcp = { version = "0.6.0", features = ["defmt"] }
edge-nal = "0.5.0"
edge-nal-embassy = { version = "0.6.0", features = ["defmt"] }
picoserve = { version = "0.16.0", features = ["defmt", "embassy"] }
serde = { version = "1.0.219", default-features = false, features = [
  "derive",
  "serde_derive",
] }
serde-json-core = { version = "0.6.0", features = ["defmt", "heapless"] }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
codegen-units = 6
opt-level = "z"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

# select one feature
[features]
default = ["esp32"]
esp32 = [
  "esp-hal/esp32",
  "esp-backtrace/esp32",
  "esp-hal-embassy/esp32",
  "esp-println/esp32",
  "esp-wifi/esp32",
]
esp32c2 = ["esp-hal/esp32c2", "esp-backtrace/esp32c2", "esp-hal-embassy/esp32c2", "esp-println/esp32c2", "esp-wifi/esp32c2", ]
esp32c3 = ["esp-hal/esp32c3", "esp-backtrace/esp32c3", "esp-hal-embassy/esp32c3", "esp-println/esp32c3", "esp-wifi/esp32c3"]
esp32c6 = ["esp-hal/esp32c6", "esp-backtrace/esp32c6", "esp-hal-embassy/esp32c6", "esp-println/esp32c6", "esp-wifi/esp32c6"]
esp32h2 = ["esp-hal/esp32h2", "esp-backtrace/esp32h2", "esp-hal-embassy/esp32h2", "esp-println/esp32h2", "esp-wifi/esp32h2"]
esp32s2 = ["esp-hal/esp32s2", "esp-backtrace/esp32s2", "esp-hal-embassy/esp32s2", "esp-println/esp32s2", "esp-wifi/esp32s2"]
esp32s3 = ["esp-hal/esp32s3", "esp-backtrace/esp32s3", "esp-hal-embassy/esp32s3", "esp-println/esp32s3", "esp-wifi/esp32s3"]
